--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "dev": "parcel public/index.html",
+    "build": "parcel build public/index.html"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
+    "gsap": "^3.12.5",
     "three": "^0.165.0"
   }
 }
